RESOLVED FIXED34551
WorkerContext.close() does not work in the chromium port
https://bugs.webkit.org/show_bug.cgi?id=34551
Summary WorkerContext.close() does not work in the chromium port
Andrew Wilson
Reported 2010-02-03 18:22:37 PST
We do not shutdown the Worker thread in the chromium port when the thread calls close(). This means that code like this: var worker = new Worker("worker.js"); worker.js: close(); Will leave the thread running until the parent window shuts down. There's code in Chromium to prevent further messages from being to/from the closing thread, but the thread itself still sits there.
Attachments
Patch (1.19 KB, patch)
2010-02-04 15:09 PST, Andrew Wilson
no flags
Andrew Wilson
Comment 1 2010-02-04 15:09:39 PST
WebKit Commit Bot
Comment 2 2010-02-04 15:43:30 PST
Comment on attachment 48172 [details] Patch Clearing flags on attachment: 48172 Committed r54380: <http://trac.webkit.org/changeset/54380>
WebKit Commit Bot
Comment 3 2010-02-04 15:43:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.