2010-02-04  Drew Wilson  <atwilson@chromium.org>

Reviewed by David Levin.

        WorkerContext.close() does not work in the chromium port
        https://bugs.webkit.org/show_bug.cgi?id=34551

        Test: Adding new downstream test.

        * src/WebWorkerBase.cpp:
        (WebKit::WebWorkerBase::workerContextClosedTask):
        Now shuts down the worker thread when WorkerContext::close() is invoked.

git-svn-id: svn://svn.chromium.org/blink/trunk@54380 bbb929c8-8fbe-4397-9dbb-9b2b20218538