third_party/WebKit/WebKit/chromium/src/WebWorkerBase.cpp
@@ -272,6 +272,8 @@ void WebWorkerBase::workerContextClosedTask(ScriptExecutionContext* context,
 {
     if (thisPtr->commonClient())
         thisPtr->commonClient()->workerContextClosed();
+
+    thisPtr->stopWorkerThread();
 }
 
 void WebWorkerBase::workerContextDestroyed()
